--- a/css/style.css
+++ b/css/style.css
@@ -78,13 +78,13 @@ header {
 .nav-link-search {
     width: 1.6rem;
     height: 4.4rem;
-    background: url("/img/search.svg") center no-repeat;
+    background: url("https://Mil-House.github.io/Example1/img/search.svg") center no-repeat;
 }
 
 .nav-link-bag {
     width: 1.4rem;
     height: 4.4rem;
-    background: url("/img/bag.svg") center no-repeat;
+    background: url("https://Mil-House.github.io/Example1/img/bag.svg") center no-repeat;
 }
 
 
@@ -92,7 +92,7 @@ header {
 
 /*==== Milhouse-banner Section ====*/
 .milhouse-banner {
-    background: url("/img/imphoto_pro.jpg");
+    background: url("https://Mil-House.github.io/Example1/img/imphoto_pro.jpg");
     margin-top: 4.4rem;
 }
 
@@ -143,7 +143,7 @@ header {
 
 /*==== Milhouse Section ====*/
 .milhouse {
-    background: url("/img/iphone_11_large.jpg");
+    background: url("https://Mil-House.github.io/Example1/img/iphone_11_large.jpg");
 }
 
 .title-dark {
@@ -188,15 +188,15 @@ header {
 @media screen and (max-width: 1068px)
 {
     .milhouse-banner {
-        background: url("/img/iphone_11_pro_medium.jpg");
+        background: url("https://Mil-House.github.io/Example1/img/iphone_11_pro_medium.jpg");
     }
 
     .milhouse {
-        background: url("/img/iphone_11_medium.jpg");
+        background: url("https://Mil-House.github.io/Example1/img/iphone_11_medium.jpg");
     }
 
     .watch {
-        background: url("/img/watch_medium.jpg");
+        background: url("https://Mil-House.github.io/Example1/img/watch_medium.jpg");
     }
 
     .hero {
@@ -220,7 +220,7 @@ header {
 
     .title-heading-watch {
         height: 6.2rem;
-        background: url("/img/logo_watch_medium.png") center no-repeat;
+        background: url("https://Mil-House.github.io/Example1/img/logo_watch_medium.png") center no-repeat;
         background-size: auto 6.2rem;
     }
 }
