--- a/css/style.css
+++ b/css/style.css
@@ -304,13 +304,13 @@ header {
         background-color: #fff;
         transition: margin-top .3192s cubic-bezier(0.04, 0.04, 0.12, 0.96);
     }
-
+    
     .line-top {
-        margin-top: 5px; /* 3 */
+        margin-top: 3px; /* 3 */
     }
 
     .line-bottom {
-        margin-top: -8px; /* -12 */
+        margin-top: -.4rem; /* -12 */
     }
 
     .active .line-top {
