--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header {
 .nav-link-search {
     width: 1.6rem;
     height: 4.4rem;
-    background: url("https://Mil-House.github.io/Example1/img/search.svg") center no-repeat;
+    background: url("https://Mil-House.github.io/Example1/img/translate.png") center no-repeat;
 }
 
 .nav-link-bag {
